--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #343434;
+  background-color: rgba(52, 52, 52, 0.8);
 }
 
 .container {
@@ -21,6 +21,45 @@ body {
   align-items: center;
   position: relative;
   padding-bottom: 5rem;
+}
+.container h1 {
+  text-align: center;
+}
+.container .content-table {
+  border-collapse: collapse;
+  margin: 1rem 0;
+  font-size: 1em;
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+.container .content-table thead tr {
+  background-color: #06f;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+  font-size: 1.1rem;
+  width: 100%;
+}
+.container .content-table th,
+.container .content-table td {
+  padding: 12px 15px;
+}
+.container .content-table tbody tr {
+  border-bottom: 0.5px solid #dddddd;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.container .content-table tbody tr a {
+  text-decoration: none;
+  color: white;
+}
+.container .content-table tbody tr a:hover {
+  font-size: 0.95rem;
+}
+.container .content-table tbody tr:last-of-type {
+  border-bottom: 2px solid #06f;
 }
 
 /*# sourceMappingURL=style.css.map */
