--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -15,4 +15,59 @@
 	align-items: center;
 	position: relative;
 	padding-bottom: 5rem;
+
+	h1 {
+		text-align: center;
+	}
+
+	.content-table {
+		border-collapse: collapse;
+		margin: 1rem 0;
+		font-size: 1em;
+		width: 100%;
+		border-radius: 5px 5px 0 0;
+		overflow: hidden;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    
+
+		thead  tr {
+			background-color: #06f;
+			color: #ffffff;
+			text-align: left;
+			font-weight: bold;
+      font-size: 1.1rem;
+      width: 100%;
+		}
+
+		th,
+		td {
+			padding: 12px 15px;
+		}
+
+		tbody {
+      
+			tr {
+				border-bottom: 0.5px solid #dddddd;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.5);
+
+				a {
+					text-decoration: none;
+					color: white;
+					&:hover {
+						font-size: 0.95rem;
+					}
+				}
+			}
+
+			// tr:nth-of-type(even) {
+			// 	background-color: rgba(38, 38,38, 0.6);
+			// }
+
+			tr:last-of-type {
+				border-bottom: 2px solid #06f;
+			}
+      
+		}
+	}
 }
