--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #343434;
+  background-color: rgba(52, 52, 52, 0.8);
 }
