--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
   color: white;
 }
 .container .content-table tbody tr a:hover {
-  font-size: 0.95rem;
+  color: #06f;
 }
 .container .content-table tbody tr:last-of-type {
   border-bottom: 2px solid #06f;
