--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -55,7 +55,7 @@
 					text-decoration: none;
 					color: white;
 					&:hover {
-						font-size: 0.95rem;
+						color: #06f;
 					}
 				}
 			}
