--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgba(52, 52, 52, 0.8);
+  background-color: #383838;
 }
 
 .container {
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   width: 25rem;
   margin: 8rem;
   margin-left: auto;
   margin-right: auto;
   padding: 1rem 2rem 3rem 2rem;
   border-radius: 5px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 5px 5px 10px gray;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,7 +49,7 @@ body {
 .container .content-table tbody tr {
   border-bottom: 0.5px solid #dddddd;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .container .content-table tbody tr a {
   text-decoration: none;
