--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -1,6 +1,6 @@
 .container {
 	color: white;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.3);
 	// background-color: white;
 	width: 25rem;
 	margin: 8rem;
@@ -8,7 +8,8 @@
 	margin-right: auto;
 	padding: 1rem 2rem 3rem 2rem;
 	border-radius: 5px;
-	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+	// box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+	box-shadow: 5px 5px 10px gray;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -49,7 +50,7 @@
 			tr {
 				border-bottom: 0.5px solid #dddddd;
         color: white;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.3);
 
 				a {
 					text-decoration: none;
