--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -2,5 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgba(52, 52, 52, 0.8);
+  // background-color: rgba(52, 52, 52, 0.8);
+  background-color: #383838;
 }
