--- a/s07/css/style.css
+++ b/s07/css/style.css
@@ -8,9 +8,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 12rem;
-  padding-right: 12rem;
-  font-size: 0.8rem;
+  padding-left: 17rem;
+  padding-right: 17rem;
+  font-size: 15px;
+  color: #393536;
 }
 @media (max-width: 70rem) {
   header {
@@ -29,8 +30,8 @@ header nav #home {
 header nav .nav {
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 1.1rem;
-  padding-bottom: 1.1rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
 }
 header nav .nav:hover {
   cursor: pointer;
@@ -40,17 +41,18 @@ header button {
   background-color: #c2195b;
   padding: 5.75px 13.5px;
   width: 137px;
-  height: 35.5px;
+  height: 43px;
   color: white;
   font-size: 1rem;
   border: none;
   border-radius: 20px;
+  font-weight: 600;
 }
 
 .banner {
   background-image: url("../images/landing2.jpg");
   margin-left: -5px;
-  height: 150px;
+  height: 200px;
   background-size: 102vw 700px;
   padding-top: 160px;
   padding-bottom: 160px;
@@ -60,16 +62,16 @@ header button {
 }
 .banner h1 {
   text-align: right;
-  font-size: 30px;
+  font-size: 39px;
 }
 @media (max-width: 1000px) {
   .banner h1 {
-    font-size: 25px;
+    font-size: 30px;
   }
 }
 .banner h2 {
   text-align: right;
-  font-size: 1rem;
+  font-size: 20px;
 }
 .banner button {
   position: absolute;
@@ -77,9 +79,10 @@ header button {
   background-color: #C2195B;
   padding: 5.75px 13.5px;
   width: 137px;
-  height: 35.5px;
+  height: 43px;
   color: white;
-  font-size: 1rem;
+  font-size: 18px;
+  font-weight: 600;
   border: none;
   border-radius: 20px;
 }
@@ -128,6 +131,7 @@ header button {
 .intro h1 {
   font-family: serif;
   margin-top: 4rem;
+  font-size: 30px;
 }
 .intro > div {
   display: flex;
