--- a/s07/sass/_banner.scss
+++ b/s07/sass/_banner.scss
@@ -5,7 +5,7 @@
   margin-left: -5px;
 
   // width: 100%;
-  height: 150px;
+  height: 200px;
   background-size: 102vw 700px;
 
   padding-top: 160px;
@@ -18,15 +18,15 @@
 
   h1 {
     text-align: right;
-    font-size: 30px;
+    font-size: 36px;
     @media (max-width: 1000px) {
-      font-size: 25px;
+      font-size: 28px;
     }
   }
 
   h2 {
     text-align: right;
-    font-size: 1rem;
+    font-size: 20px;
 
     // span {
     // font-size: 1.1rem;
@@ -39,9 +39,10 @@
     background-color: #C2195B;
     padding: 5.75px 13.5px;
     width: 137px;
-    height: 35.5px;
+		height: 43px;
     color: white;
-    font-size: 1rem;
+    font-size: 18px;
+    font-weight: 600;
     border: none;
     border-radius: 20px;
   }
